# football_analysis

./: .gitignore  README.md  pyproject.toml
src/: chart_utils.py  config.py  data_analysis.py  data_exploration.ipynb  data_munging.py
